Fix images being oversized on mobile

--- a/protected/APIs/LylinkBackend_AssetsAPI/wwwroot/css/site_style.css
+++ b/protected/APIs/LylinkBackend_AssetsAPI/wwwroot/css/site_style.css
@@ -206,6 +206,12 @@ pre {
 /* ==========================================================
 8. Mobile Styles
 ========================================================== */
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
 @media (max-width: 800px) {
 	header .breadcrumb ul {
 		flex-direction: column;
